--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,21 @@
 	  <groupId>org.springframework.cloud</groupId>
 	  <artifactId>spring-cloud-starter-config</artifactId>
 	</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.okta.spring</groupId>
+			<artifactId>okta-spring-boot-starter</artifactId>
+			<version>3.0.3</version>
+		</dependency>
+    <dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<scope>runtime</scope>
+			<optional>true</optional>
+		</dependency>
   </dependencies>
   <dependencyManagement>
     <dependencies>
